style fix broken third store header template (#1654)
The third store header has broken title styling that causes overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5059,7 +5059,7 @@ div.media-sidebar a.edit-attachment {
   }
   .dokan-single-store .profile-frame .profile-info-box.profile-layout-layout2 .profile-info-summery-wrapper .profile-info-summery .profile-info {
     position: absolute;
-    top: 15%;
+    top: 33%;
   }
   .dokan-single-store .profile-frame .profile-info-box.profile-layout-layout2 .profile-info-summery-wrapper .profile-info-summery .profile-info .store-name {
     color: inherit;
